--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,19 @@
   "name": "Jayant Goel Personal Portfolio",
   "short_name": "Jayant Goel",
   "icons": [{
-    "src": "images/Profic-pic.png",
+    "src": "images/Profile-pic.png",
     "sizes": "144x144",
     "type": "images/png"
   },{
-    "src": "images/Profic-pic.png",
+    "src": "images/Profile-pic.png",
     "sizes": "192x192",
     "type": "images/png"
   }, {
-    "src": "images/Profic-pic.png",
+    "src": "images/Profile-pic.png",
     "sizes": "512x512",
     "type": "images/png"
   },{
-    "src": "images/Profic-pic.png",
+    "src": "images/Profile-pic.png",
     "sizes": "1024x1024",
     "type": "images/png"
   }],
