--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "type": "image/png"
   }],
   "start_url": "/",
-  "display": "standalone",
+  "display": "fullscreen",
   "orientation": "portrait",
   "background_color": "#242a35",
   "theme_color": "#ff9800",
