--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,6 @@
   "orientation": "portrait",
   "background_color": "#242a35",
   "theme_color": "#ff9800",
-  "prefer_related_applications": false
+  "prefer_related_applications": false,
+  "scope": "/"
 }
