--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,5 @@
   "background_color": "#242a35",
   "theme_color": "#ff9800",
   "prefer_related_applications": false,
-  "scope": "/"
+//  "scope": "/"
 }
