--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,5 @@
   "orientation": "portrait",
   "background_color": "#242a35",
   "theme_color": "#ff9800",
-  "prefer_related_applications": false,
-//  "scope": "/"
+  "prefer_related_applications": false
 }
