--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#242a35",
-  "theme_color": "#ff9800",
+  "theme_color": "#242a35",
   "prefer_related_applications": false,
   "scope" : "/"
 }
