--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,10 @@
     "sizes": "400x400",
     "type": "image/png"
   },{
+    "src": "images/Profile-pic-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  },{
     "src": "images/Profile-pic-1024x1024.png",
     "sizes": "1024x1024",
     "type": "image/png"
