--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Jayant Goel Personal Portfolio",
-  "short_name": "Jayant Goel ♠",
+  "short_name": "Jayant Goel",
   "icons": [{
     "src": "images/Profile-pic.png",
     "sizes": "400x400",
