--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "sizes": "1024x1024",
     "type": "image/png"
   }],
-  "start_url": "/",
+  "start_url": "https://jayantgoel001.github.io/",
   "display": "fullscreen",
   "orientation": "portrait",
   "background_color": "#242a35",
