--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
   },{
     "src": "images/Profile-pic-1024x1024.png",
     "sizes": "1024x1024",
-    "type": "image/png"
+    "type": "image/png",
+    "purpose": "maskable"
   }],
   "start_url": "https://jayantgoel001.github.io/",
   "display": "fullscreen",
