--- a/manifest.json
+++ b/manifest.json
@@ -15,11 +15,10 @@
     "type": "image/png",
     "purpose": "maskable"
   }],
-  "start_url": "/",
+  "start_url": "",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#242a35",
   "prefer_related_applications": false,
-  "theme_color": "#242a35",
-  "scope" : "/"
+  "theme_color": "#242a35"
 }
