--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
         "type": "image/png",
         "purpose": "maskable"
     }],
-    "start_url": "/index.html",
+    "start_url": "/",
     "display": "standalone",
     "orientation": "portrait",
     "background_color": "#242a35",
