--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,13 @@
     "name": "Jayant Goel Personal Portfolio",
     "short_name": "Jayant Goel",
     "icons": [{
-        "src": "images/Profile-pic.png",
-        "sizes": "400x400",
-        "type": "image/png"
+        "src": "images/android-chrome-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "maskable"
     },{
-        "src": "images/Profile-pic-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-    },{
-        "src": "images/Profile-pic-1024x1024.png",
-        "sizes": "1024x1024",
+        "src": "images/android-chrome-384x384.png",
+        "sizes": "384x384",
         "type": "image/png",
         "purpose": "maskable"
     }],
