--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
     "name": "Jayant Goel Personal Portfolio",
     "short_name": "Jayant Goel",
     "icons": [{
-        "src": "/android-chrome-192x192.png",
+        "src": "images/android-chrome-192x192.png",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "maskable"
     },{
-        "src": "/android-chrome-384x384.png",
+        "src": "images/android-chrome-384x384.png",
         "sizes": "384x384",
         "type": "image/png",
         "purpose": "maskable"
