--- a/angular.json
+++ b/angular.json
@@ -17,14 +17,24 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/JayantGoel001",
+            "outputPath": "build",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              	"src/favicon.ico",
+              	"src/assets",
+				"src/.all-contributorsrc",
+				"src/apple-touch-icon.png",
+				"src/browserconfig.xml",
+				"src/favicon-16x16.png",
+				"src/favicon-32x32.png",
+				"src/favicon-48x48.png",
+				"src/LICENSE",
+				"src/manifest.json",
+				"src/robots.txt",
+				"src/sitemap_index.xml"
             ],
             "styles": [
               "src/styles.css"
