--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
 				"src/sitemap_index.xml"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.min.css"
             ],
             "scripts": []
           },
@@ -104,7 +104,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.min.css"
             ],
             "scripts": []
           }
