--- a/angular.json
+++ b/angular.json
@@ -104,7 +104,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.webmanifest"
+              "src/manifest.json"
             ],
             "styles": [
               "src/styles.min.css"
