--- a/angular.json
+++ b/angular.json
@@ -42,6 +42,7 @@
 							"src/styles.min.css"
 						],
 						"scripts": [
+							"src/assets/js/font-awesome.min.js",
 							"src/assets/js/girl.min.js",
 							"src/assets/data.min.js",
 							"src/assets/js/jquery-3.5.1.min.js",
