--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -7,14 +7,11 @@
 			"installMode": "prefetch",
 			"resources": {
 				"files": [
-					"/favicon.ico",
 					"/index.html",
-					"/404.html",
-					"/assets/**",
+					"/favicon.ico",
 					"/*.json",
 					"/*.css",
-					"/*.js",
-					"/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
+					"/*.js"
 				]
 			}
 		},
@@ -23,7 +20,10 @@
 			"installMode": "lazy",
 			"updateMode": "prefetch",
 			"resources": {
-				"files": []
+				"files": [
+					"/assets/**",
+					"/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
+				]
 			}
 		}
 	]
