--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
     "rxjs": "~6.6.0",
+    "set-value": "^4.1.0",
     "tslib": "^2.2.0",
     "typed.js": "^2.0.12",
     "zone.js": "~0.11.4"
