--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "rxjs": "~6.6.0",
     "set-value": "^4.1.0",
     "tslib": "^2.2.0",
