--- a/angular.json
+++ b/angular.json
@@ -45,6 +45,7 @@
 						],
 						"scripts": [
 							"src/assets/js/girl.min.js",
+							"src/assets/data.min.js",
 							"src/assets/js/jquery-3.5.1.min.js",
 							"src/assets/js/jquery.easing.min.js",
 							"src/assets/js/bootstrap.bundle.min.js",
