--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,3 +1,5 @@
+<IfModule mod_expires.c>
 <filesMatch ".(html|css|json|png|mtn|moc|js|ico|woff2|svg|eot|ttf|woff|jpg)$">
 Header set Cache-Control "max-age=864000, public"
 </filesMatch>
+</IfModule>
