--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
 							"src/manifest.webmanifest",
 							"src/robots.txt",
 							"src/sitemap_index.xml",
-							"src/README.md"
+							"src/README.md",
+							"screenshots"
 						],
 						"styles": [
 							"src/assets/css/font-awesome.min.css",
