--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
 							"src/robots.txt",
 							"src/sitemap_index.xml",
 							"src/README.md",
-							"screenshots"
+							"src/screenshots"
 						],
 						"styles": [
 							"src/assets/css/font-awesome.min.css",
