--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: ${{ JayantGoel001 }}
+        username: "JayantGoel001"
         password: ${{ secrets.CONTAINER_REGISTRY }}
 
     - name: Build the Docker image of my personal portfolio
@@ -21,4 +21,3 @@ jobs:
         docker build . -t ghcr.io/jayantgoel001/jayantgoel001.github.io:latest
         docker run ghcr.io/jayantgoel001/jayantgoel001.github.io:latest
         docker push ghcr.io/jayantgoel001/jayantgoel001.github.io:latest
-
