--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: publish
+name: publish-docker-image
 
 on: [push]
 
@@ -18,6 +18,5 @@ jobs:
 
     - name: Build the Docker image of my personal portfolio
       run: |
-        docker build . -t ghcr.io/jayantgoel001/jayantgoel001.github.io:latest
-        docker run ghcr.io/jayantgoel001/jayantgoel001.github.io:latest
+        docker build -t ghcr.io/jayantgoel001/jayantgoel001.github.io:latest .
         docker push ghcr.io/jayantgoel001/jayantgoel001.github.io:latest
