--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,13 +10,25 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: "JayantGoel001"
         password: ${{ secrets.CONTAINER_REGISTRY }}
 
-    - name: Build the Docker image of my personal portfolio
+    - name: Build the Docker image of my personal portfolio on Github Container Registry
       run: |
         docker build -t ghcr.io/jayantgoel001/jayantgoel001.github.io:latest .
         docker push ghcr.io/jayantgoel001/jayantgoel001.github.io:latest
+    
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+          username: "JayantGoel001"
+          password: ${{ secrets.DOCKERHUB }}
+    
+    - name: Build the Docker image of my personal portfolio on Dockerhub
+      run: |
+        docker build -t jayantgoel001/jayantgoel001.github.io:latest .
+        docker push jayantgoel001/jayantgoel001.github.io:latest
+    
