--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: publish-docker-image
 on: [push]
 
 jobs:
-  publish-docker-image:
+  publish-docker-image-on-github-cr:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,15 +20,20 @@ jobs:
       run: |
         docker build -t ghcr.io/jayantgoel001/jayantgoel001.github.io:latest .
         docker push ghcr.io/jayantgoel001/jayantgoel001.github.io:latest
-    
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-          username: "jayantgoel001"
-          password: ${{ secrets.DOCKERHUB }}
-    
-    - name: Build the Docker image of my personal portfolio on Dockerhub
-      run: |
-        docker build -t jayantgoel001/jayantgoel001.github.io:latest .
-        docker push jayantgoel001/jayantgoel001.github.io:latest
+  
+  publish-docker-image-on-dockerhub:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+            username: "jayantgoel001"
+            password: ${{ secrets.DOCKERHUB }}
+      
+      - name: Build the Docker image of my personal portfolio on Dockerhub
+        run: |
+          docker build -t jayantgoel001/jayantgoel001.github.io:latest .
+          docker push jayantgoel001/jayantgoel001.github.io:latest
     
