--- a/.github/workflows/Github Pages.yml
+++ b/.github/workflows/Github Pages.yml
@@ -18,7 +18,7 @@ jobs:
         node-version: '16'
 
     - name: Install dependencies
-      run: npm install
+      run: npm install -f
 
     - name: Run tests
       run: npm run test:headless
@@ -28,5 +28,5 @@ jobs:
       uses: oleksiyrudenko/gha-git-credentials@v2-latest
       with:
         token: '${{ secrets.GPAGES_TOKEN }}'
-        
+
     - run: ng deploy base_href="/"
