--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
-		"deploy":"ng deploy base_href='/'"
+		"deploy":"ng deploy --base_href='/'"
 	},
 	"private": true,
 	"dependencies": {
