--- a/.github/workflows/Github Pages.yml
+++ b/.github/workflows/Github Pages.yml
@@ -28,4 +28,6 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GPAGES_TOKEN }}
+        deploy_key: ${{ secrets.ACTION_DEPLOY_KEY }}
         publish_dir: "./"
+        commit_message: "Auto-generated commit [ci skip]"
