--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,11 @@
-.git
-.github
+**/.git
+**/.github
 .editorconfig
-/node_modules
-/build
-/docs
+**/node_modules
+**/build
+**/docs
 .gitignore
 *.zip
 *.md
-/.idea
-.angular
+**/.idea
+**/.angular
