--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "jayant-goel001",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^14.0.2",
-    "@angular/common": "^14.0.2",
-    "@angular/compiler": "^14.0.2",
-    "@angular/core": "^14.0.2",
-    "@angular/forms": "^14.0.2",
-    "@angular/platform-browser": "^14.0.2",
-    "@angular/platform-browser-dynamic": "^14.0.2",
-    "@angular/router": "^14.0.2",
-    "@angular/service-worker": "^14.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "typed.js": "^2.0.12",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.2",
-    "@angular/cli": "^14.0.2",
-    "@angular/compiler-cli": "^14.0.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "angular-cli-ghpages": "^1.0.0-rc.2",
-    "jasmine-core": "~3.7.0",
-    "karma": "~6.3.14",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.7.4"
-  }
+	"name": "jayant-goel001",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"deploy": "ng deploy",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^14.0.2",
+		"@angular/common": "^14.0.2",
+		"@angular/compiler": "^14.0.2",
+		"@angular/core": "^14.0.2",
+		"@angular/forms": "^14.0.2",
+		"@angular/platform-browser": "^14.0.2",
+		"@angular/platform-browser-dynamic": "^14.0.2",
+		"@angular/router": "^14.0.2",
+		"@angular/service-worker": "^14.0.2",
+		"@ng-bootstrap/ng-bootstrap": "^10.0.0",
+		"typed.js": "^2.0.12",
+		"zone.js": "~0.11.4"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^14.0.2",
+		"@angular/cli": "^14.0.2",
+		"@angular/compiler-cli": "^14.0.2",
+		"@types/jasmine": "~3.6.0",
+		"@types/node": "^12.11.1",
+		"angular-cli-ghpages": "^1.0.0-rc.2",
+		"jasmine-core": "~3.7.0",
+		"karma": "~6.3.14",
+		"karma-chrome-launcher": "~3.1.0",
+		"karma-coverage": "~2.0.3",
+		"karma-jasmine": "~4.0.0",
+		"karma-jasmine-html-reporter": "^1.5.0",
+		"typescript": "~4.7.4"
+	}
 }
