--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,14 @@ jobs:
             - name: Build
               run: npm run build
 
+            - name: Import GPG key
+              uses: crazy-max/ghaction-import-gpg@v5
+              with:
+                  gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+                  passphrase: ${{ secrets.PASSPHRASE }}
+                  git_user_signingkey: true
+                  git_commit_gpgsign: true
+
             - name: Deploy
               if: success()
               uses: peaceiris/actions-gh-pages@v3
@@ -31,4 +39,4 @@ jobs:
                   deploy_key: ${{ secrets.ACTION_DEPLOY_KEY }}
                   publish_dir: "./build"
                   enable_jekyll: true
-                  commit_message: "Auto-generated commit [ci skip]"
+                  full_commit_message: "Auto-generated commit [ci skip]"
