--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,13 @@ jobs:
 
             - name: Deploy
               if: success()
-              uses: peaceiris/actions-gh-pages@v3
+              uses: crazy-max/ghaction-github-pages@v3
               with:
                   github_token: ${{ secrets.GPAGES_TOKEN }}
-                  deploy_key: ${{ secrets.ACTION_DEPLOY_KEY }}
-                  publish_dir: "./build"
+                  committer: JayantGoel001
+                  author: JayantGoel001
+                  keep_history: true
+                  build_dir: "./build"
                   enable_jekyll: true
-                  full_commit_message: "Auto-generated commit [ci skip]"
+                  commit_message: "Auto-generated commit [ci skip]"
+
