--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,4 @@ jobs:
                   jekyll: true
                   commit_message: "Auto-generated commit [ci skip]"
               env:
-                  GITHUB_TOKEN: ${{ secrets.GPAGES_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
