--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"bugs": {
 		"url": "https://github.com/JayantGoel001/JayantGoel001.github.io/issues"
 	},
+	"keywords": ["Jayant", "Jayant Goel", "Jayant Goel Portfolio", "JayantGoel001", "Jayant Goel (JayantGoel001)'s Personal Portfolio"],
 	"repository": "https://github.com/JayantGoel001/JayantGoel001.github.io",
 	"homepage": "https://JayantGoel001.github.io",
 	"scripts": {
