--- a/.github/workflows/pull-request-deploy-and-audit.yml
+++ b/.github/workflows/pull-request-deploy-and-audit.yml
@@ -4,6 +4,17 @@ jobs:
     deploy_and_audit:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v2
+            - name: Setup NPM
+              uses: actions/setup-node@v3
+              with:
+                  node-version: "16.x"
+            - name: Install Dependency
+              run: npm install -f
+
+            - name: Run npm build
+              run: npm run build
+
             - name: Add comment to PR
               id: loading_lighthouse_comment_to_pr
               uses: marocchino/sticky-pull-request-comment@v2
@@ -26,11 +37,13 @@ jobs:
 
             - name: Audit URLs using Lighthouse
               id: lighthouse_audit
+
               uses: treosh/lighthouse-ci-action@v7
               with:
+                  budgetPath: '.github/lighthouse/budget.json'
+                  configPath: '.github/lighthouse/lighthouserc.json'
                   uploadArtifacts: true
                   temporaryPublicStorage: true
-                  configPath: './.github/lighthouse/lighthouserc.json'
 
             - name: Format lighthouse result
               id: lighthouse_result
