--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
 	"bugs": {
 		"url": "https://github.com/JayantGoel001/JayantGoel001.github.io/issues"
 	},
-	"keywords": ["Jayant", "Jayant Goel", "Jayant Goel Portfolio", "JayantGoel001", "Jayant Goel (JayantGoel001)'s Personal Portfolio"],
+	"keywords": [
+		"Jayant",
+		"Jayant Goel",
+		"Jayant Goel Portfolio",
+		"JayantGoel001",
+		"Jayant Goel (JayantGoel001)'s Personal Portfolio"
+	],
 	"repository": "https://github.com/JayantGoel001/JayantGoel001.github.io",
 	"homepage": "https://JayantGoel001.github.io",
 	"scripts": {
@@ -33,7 +39,7 @@
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^14.0.5",
-		"@angular/cli": "^14.0.5",
+		"@angular/cli": "^8.3.8",
 		"@angular/compiler-cli": "^14.0.5",
 		"@types/jasmine": "~3.6.0",
 		"@types/node": "^12.11.1",
